@@ -3,7 +3,7 @@
 
 class _Student
 {
-	public $student_id, $name, $major_code, $gpa, $cumulative_hours, $catalog_year;
+	public $student_id, $name, $major_code_array, $major_code_csv, $gpa, $cumulative_hours, $catalog_year;
 	public $list_courses_taken, $list_courses_advised, $list_courses_added, $db, $rank;
 	public $list_standardized_tests, $list_substitutions;
 	public $list_transfer_eqvs_unassigned;
@@ -468,7 +468,8 @@ class _Student
     $this->cumulative_hours = $this->db->get_student_cumulative_hours($this->student_id);	
 		$this->gpa = $this->db->get_student_gpa($this->student_id);
     $this->rank = $this->get_rank_description($this->db->get_student_rank($this->student_id));
-    $this->major_code = $this->db->get_student_major_from_db($this->student_id);
+    $this->major_code_array = $this->db->get_student_majors_from_db($this->student_id);
+    $this->major_code_csv = $this->db->get_student_majors_from_db($this->student_id, TRUE);
 		$this->catalog_year = $this->db->get_student_catalog_year($this->student_id);
 		$this->name = $this->db->get_student_name($this->student_id);
 
